# drawio-cmd

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  SKILL.md  features.md
.cargo/: config.toml
.claude/commands/: update-diagram.md
.github/workflows/: ci.yml  release.yml
docs/: RFC.md  SOW.md
docs/report/: phase1.md  phase3.md  phase4.md
example/: billing-flow.drawio  ses-business-flow.drawio
scripts/: setup.sh
src/: main.rs
src/adapter/: cli.rs
src/domain/: embed.rs  extract.rs  mod.rs  png.rs  render.rs
src/infra/: chrome_renderer.rs  mod.rs
src/usecase/: embed.rs  export.rs  extract.rs  mod.rs
tests/: roundtrip_test.rs
tests/fixtures/: simple.drawio
